Overly-aggressive edge cropping should be fixed

--- a/src/modules/WordGrid.css
+++ b/src/modules/WordGrid.css
@@ -8,8 +8,8 @@
 
   margin-top: calc(var(--tile-diam) + var(--tile-margin-vert));
   margin-bottom: var(--component-margin);
-  margin-left: var(--component-margin);
-  margin-right: var(--component-margin);
+  margin-left: calc(var(--tile-diam) + var(--tile-margin-horz));
+  margin-right: calc(var(--tile-diam) + var(--tile-margin-horz));
 
   transition: box-shadow 0.5s, width 0.5s;
 }
